--- a/index.html
+++ b/index.html
@@ -116,3 +116,42 @@
 <script src="script.js"></script>
 </body>
               </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>SocialCode • Build Ideas Fast</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div class="bg"></div>
+
+  <div class="container">
+    <header>
+      <img src="assets/logo.svg" alt="SocialCode Logo" class="logo">
+      <h1>Social<span>Code</span></h1>
+      <p class="tagline">Turn your idea into a live mini-portfolio — instantly.</p>
+    </header>
+
+    <main>
+      <div class="card" id="generatorCard">
+        <textarea id="ideaInput" placeholder="Describe your idea here..."></textarea>
+        <button id="generateBtn">✨ Generate</button>
+      </div>
+
+      <div class="card hidden" id="resultCard">
+        <h2 id="ideaTitle"></h2>
+        <p id="ideaDesc"></p>
+        <button id="resetBtn">← Back</button>
+      </div>
+    </main>
+
+    <footer>
+      <p>© 2025 SocialCode — Created by <strong>Life•Glitch Studio</strong></p>
+    </footer>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
